--- a/CHANGES
+++ b/CHANGES
@@ -14,3 +14,6 @@ version 1.2 - Wed Oct 8 2008
 version 1.3 - Web Nov 19 2008
 	- bug fix:
 		- line 87 : issue with IE and NaN fix by Rob Verzera
+version 1.4 - Fri Dec 12 2008
+	- bug fix:
+		- line 59 : issue with lists in panel fixed.
