--- a/CHANGES
+++ b/CHANGES
@@ -17,3 +17,5 @@ version 1.3 - Web Nov 19 2008
 version 1.4 - Fri Dec 12 2008
 	- bug fix:
 		- line 59 : issue with lists in panel fixed.
+version 1.5 - Wed Dec 17 2009
+	- changed name to Fx.Tabs
